force-app/main/default/objects/AFF_Job_Step_Chunk__c/AFF_Job_Step_Chunk__c.object-meta.xml
<CustomObject>
    <description>Used to work with AFF Job Step Chunks</description>
    <label>AFF Job Step Chunk</label>
    <nameField>
        <label>AFF Job Step Chunk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AFF Job Step Chunks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>