force-app/main/default/objects/AFF_Job_Step_Chunk__c/fields/AFF_Job_Step__c.field-meta.xml
<CustomField>
    <fullName>AFF_Job_Step__c</fullName>
    <label>AFF Job Step</label>
    <referenceTo>AFF_Job_Step__c</referenceTo>
    <relationshipLabel>AFF Job Step Chunks</relationshipLabel>
    <relationshipName>AFF_Job_Step_Chunks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>