force-app/main/default/objects/AFF_Job_Step_Chunk__c/fields/Chunk_Index__c.field-meta.xml
<CustomField>
    <fullName>Chunk_Index__c</fullName>
    <label>Chunk Index</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>