force-app/main/default/objects/AFF_Job_Step_Chunk__c/fields/Previous_Values_JSON__c.field-meta.xml
<CustomField>
    <fullName>Previous_Values_JSON__c</fullName>
    <label>Previous Values JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>