force-app/main/default/objects/AFF_Job_Step_Chunk__c/fields/Progress_State__c.field-meta.xml
<CustomField>
    <fullName>Progress_State__c</fullName>
    <label>Progress State</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>