force-app/main/default/objects/AFF_Job_Step_Chunk__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>